[package]
name = "yasm"
version = "0.4.1"
edition = "2024"
description = "A simple Rust state machine library focused on usability and visualization"
license = "MIT"
authors = ["Leo <kookyleo@gmail.com>"]
repository = "https://github.com/kookyleo/yasm"
homepage = "https://github.com/kookyleo/yasm"
documentation = "https://docs.rs/yasm"
readme = "README.md"
keywords = ["state-machine", "fsm", "visualization", "mermaid", "workflow"]
categories = ["data-structures", "development-tools", "visualization"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
display = []

# Examples
[[example]]
name = "basic_demo"
path = "examples/basic_demo.rs"

[[example]]
name = "advanced_usage"
path = "examples/advanced_usage.rs"

[[example]]
name = "generate_docs"
path = "examples/generate_docs.rs"

[[example]]
name = "callback_demo"
path = "examples/callback_demo.rs"
